--- a/A2-3.ipynb
+++ b/A2-3.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "このノートブックに，先週ダイクストラのアルゴリズムを実装した`FirstImplementation`クラスと`SecondImplementation`クラスをこのノートブックの以下の二つのコードセルにコピーして実行できるようにします．\n",
     "\n",
-    "次の2つのセルは準備ですので，実行してください．\n",
-    "二つ目のセルで必要なモジュールを`import`し，いくつかの関数を定義しておきます．"
+    "次の3つのセルは準備ですので，実行してください．\n",
+    "最後ののセルで必要なモジュールを`import`し，いくつかの関数を定義しておきます．"
    ]
   },
   {
@@ -49,6 +49,16 @@
     "!pip install pygraphviz\n",
     "# 最終行は Successfully installed pygraphviz-x.xx\n",
     "# x.xxの部分は1.13などのバージョン番号"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# グラフの準備\n",
+    "!git clone https://github.com/hu-ids-exercise-algorithm-II/graphs.git"
    ]
   },
   {
@@ -727,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
