--- a/A2-1-1.ipynb
+++ b/A2-1-1.ipynb
@@ -352,13 +352,13 @@
     "次のように出力されたら正しく呼び出せています．\n",
     "```\n",
     "func_print 16 9 49 36\n",
-    "r1 36\n",
+    "r1 2.0555555555555554\n",
     "func_print 9 49 36 4\n",
-    "r2 4\n",
+    "r2 23.5\n",
     "func_print 49 36 4 1\n",
-    "r3 1\n",
-    "func_print 9 49 36 4\n",
-    "r4 4\n",
+    "r3 89.0\n",
+    "func_print 36 4 1 25\n",
+    "r4 1.64\n",
     "```"
    ]
   },
@@ -370,7 +370,7 @@
    "source": [
     "def func_print(x, y, z, t):\n",
     "  print('func_print', x, y, z, t)\n",
-    "  return t\n",
+    "  return (x + y + z ) / t\n",
     "\n",
     "r = func_print(a, b, c, d)\n",
     "print('r1', r)\n",
