--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -456,7 +456,6 @@
    "outputs": [],
    "source": [
     "for e in l:\n",
-    "  print(e)\n",
     "  print(e)"
    ]
   },
@@ -734,7 +733,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. リストlの10番目の後に101を追加する．remove関数を使う．\n"
+    "# 3. リストlの10番目の直線に101を追加する．insert関数を使う．\n"
    ]
   },
   {
@@ -883,7 +882,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. リストlの10番目の後にn+1を追加する．\n"
+    "# 3. リストlの10番目の直前にn+1を追加する．\n"
    ]
   },
   {
@@ -1037,11 +1036,11 @@
     "**練習**\n",
     "次のセルに次の2つの文を書きなさい．`{11, 13, 17}`が出力されると正解．\n",
     "- `11,13,17`の3つの要素からなる集合を作成して変数`s`に代入する．\n",
-    "- `s`が出力されるように2行目に次のどちらかの行を追加する．\n",
-    "```\n",
-    "s\n",
-    "print(s)\n",
-    "```"
+    "- `s`を出力する．次のどちらかの行で出力される．\n",
+    "  ```\n",
+    "  s\n",
+    "  print(s)\n",
+    "  ```"
    ]
   },
   {
@@ -1164,7 +1163,8 @@
     "id": "YBxLVZCX1r03"
    },
    "source": [
-    "すでに集合`s`に存在する要素`5`を追加しても同じ要素が二つ入ることはありませんので，集合`s`は変化しません．"
+    "**練習**\n",
+    "次のセルを何度か実行しなさい．すでに集合`s`に何度も5を追加しても5が二つ入ることがないことを確かめなさい．"
    ]
   },
   {
@@ -1355,7 +1355,8 @@
     "次のセルは集合`s={11,13,17}`を出力するコードが書かれている．\n",
     "`add`関数と`remove`関数を書き加えて\n",
     "- `s`に二つの要素7と19を追加し，\n",
-    "- `s`から二つの要素11と17を削除しなさい．\n",
+    "- `s`から二つの要素11と17を削除し、\n",
+    "- 集合`s`を出力しなさい．\n",
     "  \n",
     "`{7, 13, 19}`が出力されると正解．"
    ]
@@ -1408,7 +1409,7 @@
    },
    "outputs": [],
    "source": [
-    "# 1. 0から99まで100要素の集合sを生成する．先の例のようにset関数とrange関数を使うとよい．\n"
+    "# 1. 0から19まで20要素の集合sを生成する．先の例のようにset関数とrange関数を使うとよい．\n"
    ]
   },
   {
@@ -1709,7 +1710,7 @@
     "\n",
     "参考：[辞書型の説明1](https://docs.python.org/ja/3/tutorial/datastructures.html#dictionaries)，[2](https://docs.python.org/ja/3/library/stdtypes.html#mapping-types-dict)\n",
     "\n",
-    "次のセルでは3要素の辞書を作成しています．`11,13,17`の3つのキーがあり，キー`11`には値`5`が，キー`13`には値`6`が，キー`17`には値`7`が割り当てられた辞書です．"
+    "次のセルでは3要素の辞書を作成しています．11,13,17の3つのキーがあり，キー11には値5が，キー13には値6が，キー17には値7が割り当てられた辞書です．"
    ]
   },
   {
@@ -1783,10 +1784,10 @@
     "id": "rAL2YzVjZYvw"
    },
    "source": [
-    "次のように辞書名に`[11]`につけるとキー`11`の値`5`が返されます．リストの先頭要素を`l[0]`で読み書きしていたのと同じ記号`[]`でキーを囲みます．\n",
+    "次のように辞書名に`[11]`につけるとキー11の値5が返されます．リストの先頭要素を`l[0]`で読み書きしていたのと同じ記号`[]`でキーを囲みます．\n",
     "\n",
     "**練習**\n",
-    "`d[11]のセルを書き換えて，`13`と`17`のキーで`6`と`7`の値が返されることを試しなさい．\n",
+    "`d[11]`のセルを書き換えて，13と1のキーで6と7の値が返されることを試しなさい．\n",
     "さらに，存在しないキー（例えば12）だと次のエラーが起こることを確かめなさい．\n",
     "\n",
     "```\n",
@@ -2035,11 +2036,11 @@
    },
    "outputs": [],
    "source": [
-    "d2 = {\"one\": 1, \"two\": 2, \"three\": 3, \"four\": 4}\n",
-    "print(d2[\"one\"])  # キー\"one\"に対応する値1が出力される\n",
-    "st = \"two\"\n",
-    "print(d2[st])     # キー\"two\"に対応する値2が出力される\n",
-    "d2[st] = \"二\"\n",
+    "d2 = {'one': 1, 'two': 2, 'three': 3, 'four': 4}\n",
+    "print(d2['one'])  # キー'one'に対応する値1が出力される\n",
+    "st = 'two'\n",
+    "print(d2[st])     # キー'two'に対応する値2が出力される\n",
+    "d2[st] = 'ふたつ'\n",
     "d2"
    ]
   },
@@ -2230,6 +2231,7 @@
    },
    "outputs": [],
    "source": [
+    "print(\"ソート前\", t)\n",
     "t.sort() # リストtを小さいものから順に並び替える\n",
     "print(\"ソート後\", t)\n",
     "t[2]"
@@ -2331,8 +2333,10 @@
     "```\n",
     "\n",
     "**練習**\n",
-    "下のコードに`time_to_search`関数の定義と呼び出しを書き加えて上のコードと同じ出力になるようにしなさい．\n",
+    "下のコードに`time_to_search`関数の定義と呼び出しを書き加えなさい．\n",
+    "`for`文の繰り返しはこの関数内で行います．\n",
     "書き加えるコードは次のようにするとよい．\n",
+    "出力する時間の単位をマイクロ秒にしています．\n",
     "\n",
     "関数の定義（字下げをよく見て関数の範囲や`for`文の範囲を把握すること）\n",
     "```\n",
@@ -2458,7 +2462,7 @@
     "    t0 = time.time()\n",
     "    entry in list_or_other # 上の例で 11 in l の部分\n",
     "    t1 = time.time()\n",
-    "    t.append(t1　-　t0) # 計測時間t1-t0をリストtに保存する\n",
+    "    t.append(t1 - t0) # 計測時間t1-t0をリストtに保存する\n",
     "  t.sort()\n",
     "  return t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "\n",
@@ -3344,7 +3348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
