--- a/A2-2-2.ipynb
+++ b/A2-2-2.ipynb
@@ -228,19 +228,19 @@
     "\n",
     "  # すべての頂点uについて距離d[u]を初期化する\n",
     "  def initialize_single_source(self, G):\n",
-    "    ...\n",
+    "    ....\n",
     "\n",
     "  # Qに頂点uを加える\n",
     "  def insert(self, u):\n",
-    "    ...\n",
+    "    ....\n",
     "\n",
     "  # Qから最小値の頂点uを取り出す．\n",
     "  def extract_min(self):\n",
-    "    return ...\n",
+    "    return ....\n",
     "\n",
     "  # 頂点vへの二つの経路のうち短いものを残す\n",
     "  def relax(self, u, v, L):\n",
-    "    ..."
+    "    ...."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
