--- a/A2-2-4.ipynb
+++ b/A2-2-4.ipynb
@@ -222,6 +222,7 @@
     "log = False # log = Trueにすると途中経過が出力される\n",
     "\n",
     "c = SecondImplementation()\n",
+    "s = 0\n",
     "d = c.dijkstra(G1, L1, 0)\n",
     "print(\"d =\", support.sortdict(d)) # 距離の辞書dを出力（頂点でソートして出力)\n",
     "if d == answer_d1:\n",
@@ -254,7 +255,8 @@
     "log = False # log = Trueにすると途中経過が出力される\n",
     "\n",
     "c = SecondImplementation()\n",
-    "d = c.dijkstra(G2, L2, 0)\n",
+    "s = 0\n",
+    "d = c.dijkstra(G2, L2, s)\n",
     "print(\"d =\", support.sortdict(d)) # 距離の辞書dを出力（頂点でソートして出力)\n",
     "if d == answer_d2:\n",
     "  print('すべての頂点の距離が一致しました')\n",
@@ -325,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
