fix m in the last section.

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -2983,6 +2983,7 @@
     "nlist = []                       # 要素数のリスト．グラフX軸のデータ\n",
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
+    "m = 1000\n",
     "\n",
     "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
@@ -2990,13 +2991,13 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      t0 = time.time()\n",
     "      e = l.pop()\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
     "      l.append(e)\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3024,13 +3025,13 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      e = l.pop()\n",
     "      t0 = time.time()\n",
     "      l.append(e)\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3092,13 +3093,13 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      e = l.pop()\n",
     "      t0 = time.time()\n",
     "      l.insert(len(l) // 2, e)\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3161,13 +3162,13 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      e = l.pop()\n",
     "      t0 = time.time()\n",
     "      l.insert(0, e)\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3195,12 +3196,12 @@
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      t0 = time.time()\n",
     "      l.reverse()\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3228,12 +3229,12 @@
     "  t = []\n",
     "  for i in range(5):\n",
     "    tsum = 0\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      t0 = time.time()\n",
     "      random.shuffle(l)\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3261,13 +3262,13 @@
     "  t = []\n",
     "  for i in range(5):\n",
     "    tsum = 0\n",
-    "    for j in range(1000):\n",
+    "    for j in range(m):\n",
     "      random.shuffle(l)\n",
     "      t0 = time.time()\n",
     "      l.sort()\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
