Hiさんのコメントなどの修正

--- a/A2-1-1.ipynb
+++ b/A2-1-1.ipynb
@@ -409,7 +409,7 @@
     "r = s / t\n",
     "print(r)\n",
     "s = d + e + f\n",
-    "t = a\n",
+    "t = g\n",
     "r = s / t\n",
     "print(r)"
    ]
@@ -447,7 +447,7 @@
     "print(r)\n",
     "r = func(c, d, e, f)\n",
     "print(r)\n",
-    "r = func(b, c, d, e)\n",
+    "r = func(d, e, f, g)\n",
     "print(r)"
    ]
   },
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
