--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -545,7 +545,7 @@
    "source": [
     "いよいよ探索です．リスト`l`にある要素が含まれているか調べる処理を書きます．\n",
     "\n",
-    "リスト`l`の中に`3`が含まれているかを`in`演算子で調べることができます．含まれていれば`True`を返します．"
+    "リスト`l`の中に13が含まれているかを`in`演算子で調べることができます．13が含まれているので`True`が返ります．"
    ]
   },
   {
@@ -579,7 +579,7 @@
     "id": "_rsDh2TEqe56"
    },
    "source": [
-    "次の文では`l`に`6`が含まれていないので`False`が返ります．"
+    "次の文では`l`に6が含まれていないので`False`が返ります．"
    ]
   },
   {
@@ -613,7 +613,7 @@
     "id": "eyLIQIU2qY1p"
    },
    "source": [
-    "次のように真偽値(`True`と`False`)は`if`文で処理を分けることに使えます．`3 in l`の`3`をリストに含まれない要素に書き換えてください．書き換えると`'見つからなかった'`が出力されるはずです．\n",
+    "次のように真偽値(`True`と`False`)は`if`文で処理を分けることに使えます．`13 in l`の`13`の部分をリストに含まれない要素に書き換えてください．書き換えると`'見つからなかった'`が出力されるはずです．文字列の'13が'の部分も同時に書き換えないと不自然な出力になりますね．\n",
     "\n",
     "参考：[`if`文の説明](https://docs.python.org/ja/3/tutorial/controlflow.html#if-statements)"
    ]
@@ -640,10 +640,10 @@
    },
    "outputs": [],
    "source": [
-    "if 6 in l:\n",
-    "  c = \"6が見つかった\"\n",
+    "if 13 in l:\n",
+    "  c = '13が見つかった'\n",
     "else:\n",
-    "  c = \"6が見つからなかった\"\n",
+    "  c = '13が見つからなかった'\n",
     "c"
    ]
   },
@@ -695,7 +695,7 @@
    },
    "source": [
     "**練習**\n",
-    "以下のコメントに沿って次のコードを書きなさい．\n",
+    "以下のコメントに沿ってコードを書きなさい．\n",
     "100要素のリスト`l`を生成して，要素の追加や削除をした後，リストに要素が含まれるか探索します．\n",
     "それぞれのコードセルで実行する内容は`#`で始まる行のコメントで指示しています．"
    ]
@@ -1398,7 +1398,7 @@
    "source": [
     "**練習**\n",
     "以下のコメントに沿って集合`s`を操作するコードを書きなさい．\n",
-    "各コードセルの処理はコメントに書いてある内容に従いなさい．"
+    "各コードセルの処理はコメントに書いてある内容にしなさい．"
    ]
   },
   {
@@ -1559,9 +1559,32 @@
    "source": [
     "# 1. 変数nに100などを代入し，0からn-1までのn要素の集合sを生成する．\n",
     "# 集合の生成にはset関数とrange関数を使うとよい．\n",
-    "# 最後に集合sの要素数を出力する．len(s)を使うとよい．\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1133,
+     "status": "ok",
+     "timestamp": 1712302146617,
+     "user": {
+      "displayName": "北須賀輝明",
+      "userId": "08683967670490393975"
+     },
+     "user_tz": -540
+    },
+    "id": "BTQm65Dp6qTM",
+    "outputId": "70cda777-5456-4d22-c3dd-c94470256a23"
+   },
+   "outputs": [],
+   "source": [
+    "# 2. 集合sの要素数を出力する．len(s)を使うとよい．\n"
    ]
   },
   {
@@ -1586,7 +1609,7 @@
    },
    "outputs": [],
    "source": [
-    "# 2. 集合sに要素nが含まれているか調べる．Falseが出力される．\n"
+    "# 3. 集合sに要素nが含まれているか調べる．Falseが出力される\n"
    ]
   },
   {
@@ -1611,8 +1634,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. 集合sに要素nを追加する．要素数を出力して追加できたことを確認する．\n",
-    "\n"
+    "# 4. 集合sに要素nを追加する．\n"
    ]
   },
   {
@@ -1637,7 +1659,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4. 要素nが含まれているか調べる．Trueが出力される．\n"
+    "# 5. 要素数を出力して追加できたことを確認する．\n"
    ]
   },
   {
@@ -1662,8 +1684,32 @@
    },
    "outputs": [],
    "source": [
-    "# 5. 要素10を削除する．要素数を出力して削除できたことを確認する．\n",
-    "\n"
+    "# 6. 集合sに要素nが含まれているか調べる．Trueが出力される\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 11,
+     "status": "ok",
+     "timestamp": 1712302146962,
+     "user": {
+      "displayName": "北須賀輝明",
+      "userId": "08683967670490393975"
+     },
+     "user_tz": -540
+    },
+    "id": "pGVCnzSI7J2O",
+    "outputId": "f25b187a-7c29-4686-9a7a-cebf7ee43294"
+   },
+   "outputs": [],
+   "source": [
+    "# 7. 集合sから要素10を削除する．要素数を出力して削除できたことを確認する．\n"
    ]
   },
   {
@@ -1688,7 +1734,32 @@
    },
    "outputs": [],
    "source": [
-    "# 6. 集合sに要素10が含まれているか調べる．Falseが出力される．\n"
+    "# 8. 要素数を出力して削除できたことを確認する．\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 10,
+     "status": "ok",
+     "timestamp": 1712302146962,
+     "user": {
+      "displayName": "北須賀輝明",
+      "userId": "08683967670490393975"
+     },
+     "user_tz": -540
+    },
+    "id": "4PVU1ofG7Y6b",
+    "outputId": "dfe06b72-3db2-4a7c-fe25-0daedaeba4ae"
+   },
+   "outputs": [],
+   "source": [
+    "# 9. 集合sに要素10が含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -1698,7 +1769,7 @@
    },
    "source": [
     "### 4.3 辞書\n",
-    "Pythonの辞書型(dictionary)は集合型を拡張したデータ構想です．\n",
+    "Pythonの辞書型(dictionary)は集合型を拡張したデータ構造です．\n",
     "集合型の各要素をキーと呼び，各キーに対して値を割り当てられます．\n",
     "キーと値の組の集合で，キーで索引付けされます．\n",
     "リストが0番目，1番目，2番目のように添え字で要素を区別するように，辞書ではキーで要素を区別します．\n",
@@ -1929,7 +2000,7 @@
    "outputs": [],
    "source": [
     "d[19] = 8  # キー19と値8の組を辞書dに追加\n",
-    "del d[11]  # キーが1の要素を辞書dから削除\n",
+    "del d[11]  # キーが11の要素を辞書dから削除\n",
     "d"
    ]
   },
@@ -2352,9 +2423,9 @@
     "```\n",
     "関数の呼び出し\n",
     "```\n",
-    "tl = time_to_search(19, l) # 関数内で11 in lを実行するように引数を渡す\n",
-    "ts = time_to_search(19, s) # 関数内で11 in sを実行するように引数を渡す\n",
-    "td = time_to_search(19, d) # 関数内で11 in dを実行するように引数を渡す\n",
+    "tl = time_to_search(19, l) # 関数内で19 in lを実行するように引数を渡す\n",
+    "ts = time_to_search(19, s) # 関数内で19 in sを実行するように引数を渡す\n",
+    "td = time_to_search(19, d) # 関数内で19 in dを実行するように引数を渡す\n",
     "```"
    ]
   },
@@ -2413,7 +2484,7 @@
     "id": "HiyLNAALTJPd"
    },
    "source": [
-    "上のセルのコードでは，`in`演算子の処理は0．1マイクロ秒（10の-7乗秒）くらいの短時間で終わるため計測が難しい．次の練習で同じ処理を千回繰り返すようにする．\n",
+    "上のセルのコードでは，`in`演算子の処理は0．1マイクロ秒（10の-7乗秒）くらいの短時間で終わるため計測が難しい．次の練習で`in`演算子を千回繰り返した時間を計測するようにする．\n",
     "\n",
     "**練習**\n",
     "同じ処理を千回繰り返すように以下のコード中の`time_to_search`関数を書き替えなさい．\n",
@@ -2421,7 +2492,7 @@
     "`entry in list_or_other`の部分を次のように書き替えると千回繰り返すようになる．\n",
     "```\n",
     "    for j in range(1000):\n",
-    "      entry in list_or_other # 上の例で 11 in l の部分\n",
+    "      entry in list_or_other # 上の例で 19 in l の部分\n",
     "```\n",
     "また時間をリスト`t`に記録する部分`t.append(t1 - t0)`を次のように書き替えると一回あたりの平均時間が記録される．\n",
     "```\n",
@@ -2460,16 +2531,16 @@
     "  t = []\n",
     "  for i in range(5):\n",
     "    t0 = time.time()\n",
-    "    entry in list_or_other # 上の例で 11 in l の部分\n",
+    "    entry in list_or_other # 上の例で 19 in l の部分\n",
     "    t1 = time.time()\n",
     "    t.append(t1 - t0) # 計測時間t1-t0をリストtに保存する\n",
     "  t.sort()\n",
     "  return t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "\n",
     "# 関数の呼び出し\n",
-    "tl = time_to_search(19, l) # 関数内で11 in lを実行するように引数を渡す\n",
-    "ts = time_to_search(19, s) # 関数内で11 in lを実行するように引数を渡す\n",
-    "td = time_to_search(19, d) # 関数内で11 in lを実行するように引数を渡す\n",
+    "tl = time_to_search(19, l) # 関数内で19 in lを実行するように引数を渡す\n",
+    "ts = time_to_search(19, s) # 関数内で19 in lを実行するように引数を渡す\n",
+    "td = time_to_search(19, d) # 関数内で19 in lを実行するように引数を渡す\n",
     "\n",
     "print(\"リストの実行時間\", tl * 10**6)\n",
     "print(\"集合の実行時間　\", ts * 10**6)\n",
@@ -3053,7 +3124,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  t = []\n",
     "  for i in range(5):\n",
@@ -3087,19 +3158,19 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  t = []\n",
     "  for i in range(5):\n",
     "    tsum = 0\n",
     "    random.shuffle(l)\n",
-    "    for j in range(m):\n",
+    "    for j in range(1000):\n",
     "      e = l.pop()\n",
     "      t0 = time.time()\n",
     "      l.insert(len(l) // 2, e)\n",
     "      t1 = time.time()\n",
     "      tsum += t1 - t0\n",
-    "    t.append(tsum / m) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
+    "    t.append(tsum / 1000) #　追加したfor文の繰り返し回数で割ると平均時間になる\n",
     "  t.sort()\n",
     "  t = t[2] # 5回計測したうちの中間の値を計測時間とする．単位は秒\n",
     "  print(\"要素数: \", n, \"\\t時間(μs): \", t * 10**6)\n",
@@ -3121,7 +3192,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  t = []\n",
     "  for i in range(5):\n",
@@ -3155,7 +3226,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  random.shuffle(l)\n",
     "  t = []\n",
@@ -3190,7 +3261,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000, 10000, 20000, 50000, 100000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  t = []\n",
     "  for i in range(5):\n",
@@ -3223,7 +3294,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000]: # , 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  k = len(l) // 2\n",
     "  t = []\n",
@@ -3257,7 +3328,7 @@
     "tlist = []                       # 実行時間のリスト．グラフのY軸のデータ\n",
     "print(label)\n",
     "\n",
-    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000]: # , 10000, 20000, 50000, 100000, 200000, 500000, 1000000]:\n",
+    "for n in [5, 10, 20, 50, 100, 200, 500, 1000, 2000, 5000]:\n",
     "  l = list(range(n))  # 0からn-1までのn要素のリストを作る\n",
     "  k = len(l) // 2\n",
     "  t = []\n",
@@ -3301,20 +3372,6 @@
     "plt.legend(loc='upper left')     # 凡例\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
