Hiさんのコメントなどの修正（漏れていた分）

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -733,7 +733,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. リストlの10番目の直線に101を追加する．insert関数を使う．\n"
+    "# 3. リストlの10番目の直前に101を追加する．insert関数を使う．\n"
    ]
   },
   {
@@ -3406,7 +3406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
