Hiさんのコメントなどの修正（漏れていた分その2）

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -293,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "l.insert(2, 23) # 先頭から2つ目の要素の後に23を挿入．\n",
+    "l.insert(2, 23) # 先頭から2番目の要素の直前に23を挿入．先頭要素は0番目と数える．\n",
     "l"
    ]
   },
